[package]
name = "init-value"
version = "0.1.0"
authors = ["Henry Till <henrytill@gmail.com>"]
edition = "2018"

[[bin]]
name = "init_value"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
std = ["casper-contract/std", "casper-types/std"]

[dependencies]
casper-contract = { path = "../../../contract" }
casper-types = { path = "../../../../types" }
