[package]
name = "ee-1217-recursive-subcall"
version = "0.1.0"
authors = ["Daniel Werner <dan@casperlabs.io>"]
edition = "2018"

[[bin]]
name = "ee_1217_recursive_subcall"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
std = ["casper-contract/std", "casper-types/std"]

[dependencies]
casper-contract = { path = "../../../contract", features = ["test-support"] }
casper-types = { path = "../../../../types" }
